# OCR

./: .gitignore  ARCHITECTURE.md  README.md  index.html  pyproject.toml  requirements-optional.txt  requirements.txt
config/: default_config.yaml
scripts/: make_multicolumn_test_pdf.py  make_test_pdf.py
src/ocr_book/: __init__.py
src/ocr_book/cli/: main.py
src/ocr_book/config/: __init__.py  loader.py  schema.py
src/ocr_book/export/: __init__.py  base.py  block_grouping.py  docx_exporter.py  epub_exporter.py  factory.py  html_builder.py  html_exporter.py  markdown_exporter.py  pdf_exporter.py  txt_exporter.py
src/ocr_book/gui/: app.py  main_window.py  styles.py  worker.py
src/ocr_book/importers/: __init__.py  base.py  detector.py  factory.py  image_importer.py  pdf_importer.py
src/ocr_book/layout/: __init__.py  base.py  classifiers.py  columns.py  factory.py  heuristic_analyzer.py  models.py  reading_order.py  row_bands.py
src/ocr_book/ocr/: __init__.py  base.py  column_ocr.py  easyocr_engine.py  engine_factory.py  language_codes.py  models.py  paddleocr_engine.py  style_detection.py  tesseract_engine.py
src/ocr_book/pipeline/: __init__.py  orchestrator.py  page_worker.py  progress.py
src/ocr_book/preprocessing/: __init__.py  operations.py  pipeline.py
src/ocr_book/reconstruction/: __init__.py  document_model.py  reconstructor.py  text_joiner.py
tests/: conftest.py  test_exporters.py  test_layout_analyzer.py  test_orchestrator.py  test_reconstructor.py  test_style_detection.py  test_text_joiner.py  test_translation.py  test_web_api.py
(+33 files in other folders)
