[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-book"
version = "0.1.0"
description = "Reconstrucción inteligente de libros escaneados con OCR y traducción opcional"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pymupdf>=1.24",
    "pillow>=10.3",
    "pytesseract>=0.3.10",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "ebooklib>=0.18",
    "weasyprint>=61.0",
    "markdown>=3.6",
    "langdetect>=1.0.9",
    "click>=8.1",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
paddleocr = ["paddleocr>=2.7", "paddlepaddle>=2.6"]
easyocr = ["easyocr>=1.7"]
translation-local = ["argostranslate>=1.9"]
translation-anthropic = ["anthropic>=0.30"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
ocrbook = "ocr_book.cli.main:cli"
ocrbook-gui = "ocr_book.gui.app:run_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
